# PARVYOM-metanode

./: .gitignore  .pre-commit-config.yaml  BPCI_TESTNET_DEPLOYMENT_PLAN.md  BPI_100_PERCENT_PRODUCTION_PLAN.md  CLEANUP_AUDIT.md  COMPREHENSIVE_CAPABILITY_TEST.rs  Cargo.toml  Makefile  README.md  README_OLD.md  bpci-config.toml  cli-demo-script.sh  essential_test_selection_plan.md  fix-test-compilation.sh  generate_modules.py  hermes_lite_web4_benchmark_results.json  httpcg_demo_server  httpcg_demo_server.rs  run-integration-tests.sh  setup-full-network.sh  simple_test  simple_test.rs  start-bpi-grafana.sh  test-all-installers.sh  test-dual-system-integration.sh  test_100_capabilities.rs  test_http_cage_httpcg.rs  test_httpcg_integration.rs  test_new_architecture.rs
bpci-enterprise/: Cargo.toml  config.toml  demo_wallet_registry.sh  deploy_testnet.sh  errors_raw.txt  run_penetration_tests.sh  stop_testnet.sh  test_bpi_integration.sh  test_real_universal_system  test_real_universal_system.rs
bpci-enterprise/crates/ai-security/: Cargo.toml
bpci-enterprise/crates/hermes-lite-web4/: Cargo.toml
bpci-enterprise/data/: mining_state.json
bpci-enterprise/src/: auction_mode_manager.rs  blockchain_helpers.rs  bpci_auction_mempool.rs  bpci_auction_mempool_minimal.rs  bpci_auth_wallet_endpoints.rs  bpci_consensus_server.rs  bpci_penetration_testing.rs  bpi_ledger_integration.rs  bpi_testnet_integration.rs  community_installer_os.rs  config.rs  court_bpi_mesh_integration.rs  court_shadow_bridge.rs  cue_contract_deployer.rs  cuedb_agreement.rs  cuedb_manager.rs  daemon_tree.rs  dbyml_config.rs  government_layer_integration.rs  lib.rs  main.rs  metanode_cluster_manager.rs  round_table_oracle.rs  smartcontract_policy_agreement.rs  stamped_wallet_api_access.rs  testnet_auction_storage.rs  testnet_config.rs  triple_consensus_coordinator.rs  unified_audit_system.rs
bpci-enterprise/src/cli/: cross_system.rs  (+14 more)
bpci-enterprise/tests/: round_table_integration_test.rs  universal_jurisdiction_demo.rs
bpi-core/: Cargo.toml  test_orchestration.cue
bpi-core/BPI UI/: bpi-wallet-ui.html  package-lock.json  package.json  simple-bpi-dashboard.html  tsconfig.json
bpi-core/contracts/: escrow_agreement.cue  escrow_contract.cue
bpi-core/cue_configs/: agreements.cue  biso.cue  cdnt.cue  contracts.cue  court.cue  enc.cue  firewall.cue  gateway.cue  httpcg.cue  m2m.cue  minimal.default  nignix.cue  security.cue  smartcontracts.cue  storage.cue  trafficlight.cue  vmorc.cue
bpi-core/examples/: client_sdk_integration_test.rs  custom_biso_agreements.rs  httpcg_addressing_demo.rs  xtmp_internet_communication_proof.rs  xtmp_network_test.rs
bpi-core/src/: autonomous_runes_engine.rs  biso_agreement.rs  bpci_xtmp_server.rs  bpi_action_vm.rs  bpi_ledger_state.rs  bpi_node_coordinator.rs  bpi_wallet_command.rs  control_fedrate_network.rs  court_node.rs  court_vm_audit.rs  cue_agreement_deployment.rs  cue_installer.rs  cue_orchestration.rs  distributed_storage.rs  domain_authority_system.rs  domain_management_api.rs  enhanced_cdn_storage.rs  global_naming_economy.rs  httpcg_domain_registry.rs  httpcg_suffix_domain_system.rs  immutable_audit_system.rs  lib.rs  main.rs  node_coordinator.rs  node_coordinator_impl.rs  node_coordinator_test.rs  orchestration_vm.rs  shadow_registry_bridge.rs  stamped_bpi_communication.rs  universal_audit_vm.rs  vm_server.rs  xtmp_bpci_client.rs  xtmp_integration_test.rs  xtmp_protocol.rs
bpi-core/tests/: human_readable_audit_test.rs  vm_audit_integration_test.rs  vm_binary_audit_test.rs
bpi-core/web_apps/: httpcg_demo_app.html  httpcg_hello_world.html
bpi-immutable-os/: Cargo.toml
bpi-immutable-os/src/: atomic_updates.rs  bpi_integration.rs  filesystem_engine.rs  hardware_detection.rs  main.rs  security_hardening.rs
capability-tests/: Cargo.toml
capability-tests/src/: lib.rs
comprehensive-350-tests/: Cargo.toml
comprehensive-350-tests/src/: lib.rs  main.rs
installer/agreementc/: Cargo.toml
installer/bpi/: Cargo.toml
installer/metanode/: Cargo.toml
pravyom-wallet/: Cargo.toml  wallet-config.yaml
pravyom-wallet/src/: main.rs
pravyom-wallet/ui/: index.html
tests/: Cargo.toml  cross_domain_httpcg_integration_test.rs  lib.rs  real_cross_domain_httpcg_demo.rs  test_helpers.rs  test_helpers_10_20.rs  test_helpers_20_30.rs  test_helpers_30_40.rs
tests/integration/: batch_01_consensus_core.rs  batch_02_economics_core.rs  batch_03_security_core.rs  batch_04_storage_core.rs  batch_05_networking_core.rs  batch_06_mempool_transaction.rs  batch_07_crosschain_interop.rs  batch_08_advanced_consensus.rs  batch_09_consensus_scalability.rs  batch_10_consensus_finality.rs  batch_11_consensus_performance.rs  batch_12_consensus_governance.rs  batch_13_economics_core_advanced.rs  batch_14_fee_market_dynamics.rs  batch_15_staking_rewards.rs  batch_16_economic_incentives.rs  batch_17_resource_pricing.rs  batch_18_payment_processing.rs  batch_19_economic_attack_resistance.rs  batch_20_token_economics_validation.rs  batch_21_inflation_deflation_mechanisms.rs  batch_22_economic_governance_proposals.rs  batch_23_advanced_cryptographic_operations.rs  batch_24_key_management_rotation.rs  batch_25_security_audit_mechanisms.rs  batch_26_attack_prevention_systems.rs  batch_27_cryptographic_proof_verification.rs  batch_28_zero_knowledge_proof_systems.rs  batch_29_multi_signature_schemes.rs  batch_30_threshold_cryptography.rs  batch_31_secure_communication_protocols.rs  batch_32_identity_access_management.rs  batch_33_security_policy_enforcement.rs  batch_34_vulnerability_assessment.rs  batch_35_advanced_database_operations.rs  batch_36_state_tree_management.rs  batch_37_data_integrity_verification.rs  batch_43_advanced_p2p_communication.rs  batch_51_advanced_transaction_validation.rs  batch_57_light_client_synchronization.rs  (+3 more)
wallet-identity/: Cargo.toml
wallet-identity/src/: device_authorization.rs  identity_registry.rs  lib.rs  wallet_identity.rs  xtmp_shadow.rs  xtmp_shadow_enhanced.rs  xtmp_socket.rs  xtmppay.rs
wallet-identity/tests/: httpcg_web35_integration_test.rs.disabled
(+1065 files in other folders)
