[workspace]
resolver = "2"
members = [
    "shared/crates/crypto-primitives",
    "shared/crates/networking",
    "shared/crates/storage",
    "shared/crates/protocols",
    "bpi-core",
    "bpi-core/crates/metanode-core/http-cage",
    "bpi-core/crates/metanode-core/receipts",
    "bpi-core/crates/metanode-core/polar-proofs",
    "bpi-core/crates/metanode-economics",
    "bpi-core/crates/metanode-stamped-wallets",
    "bpi-core/crates/enc-cluster-manager",
    "bpi-core/crates/zklock-mobile-port",
    "bpi-core/crates/bpi-oracle-node",
    "bpci-enterprise",
    "bpci-enterprise/crates/hermes-lite-web4",
    "wallet-identity",
    "capability-tests",
    "comprehensive-350-tests",
    "bpi-immutable-os",
    "tests",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Metanode Team <team@metanode.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/metanode/metanode"
homepage = "https://metanode.org"
documentation = "https://docs.metanode.org"
keywords = ["blockchain", "consensus", "military-grade", "quantum-resistant"]
categories = ["cryptography", "network-programming", "command-line-utilities"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
ring = "0.17"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
blake3 = "1.5"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
hmac = "0.12"

# Async and concurrency
async-trait = "0.1"
futures = "0.3"

# Networking
hyper = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
tokio-tungstenite = "0.21"

# Database and storage
sled = "0.34"

# Math and utilities
rust_decimal = { version = "1.33", features = ["serde-float"] }
config = "0.14"
dashmap = "5.5"
lz4 = "1.24"
zstd = "0.13"
bincode = "1.3"
hex = "0.4"
num-bigint = "0.4"
base64 = "0.22"
num-traits = "0.2"
prometheus = "0.13"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
proptest = "1.4"
