[package]
name = "pravyom-enterprise"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pravyom Enterprise Server - Military-grade blockchain server"

[[bin]]
name = "pravyom-enterprise"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
clap = { version = "4.0", features = ["derive"] }
once_cell = "1.19"

hex = "0.4"
toml = "0.8"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Shared components
crypto-primitives = { path = "../shared/crates/crypto-primitives" }
networking = { path = "../shared/crates/networking" }
storage = { path = "../shared/crates/storage" }
protocols = { path = "../shared/crates/protocols" }

# DockLock platform
bpi-docklock = { path = "crates/docklock-platform/docklock" }

# Real BPI Core Components - Now with Fixed Dependencies
bpi-enc = { path = "../bpi-core/crates/metanode-security/bpi-enc" }
bpi-blsagg = { path = "../bpi-core/crates/blsagg" }
bpi-validator-set = { path = "../bpi-core/crates/metanode-consensus/bpi-validator-set" }
bpi-consensus = { path = "../bpi-core/crates/metanode-consensus/bpi-consensus" }
bpi-merkle = { path = "../bpi-core/crates/metanode-core/merkle" }

# Real mining and blockchain components
blake3 = "1.5"
sha2 = "0.10"
md5 = "0.7"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.32", features = ["serde-float"] }
rand = "0.8"
ed25519-dalek = "2.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

# Missing dependencies for real implementations
ed25519-dalek = "2.0"
rand = "0.8"

# Round Table Oracle dependencies
env_logger = "0.10"
