[package]
name = "pravyom-wallet"
version = "0.1.0"
edition = "2021"
description = "Modern, light and powerful wallet for BPI Core infrastructure management"
authors = ["PARVYOM Team"]

[[bin]]
name = "pravyom-wallet"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Web framework for wallet API
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Cryptography
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
blake3 = "1.5"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# WebSocket for real-time updates
tungstenite = "0.21"
tokio-tungstenite = "0.21"
futures = "0.3"

# HTTP client for BPI Core communication
reqwest = { version = "0.11", features = ["json", "stream"] }

# Local BPI Core integration
bpi-core = { path = "../bpi-core" }

[dev-dependencies]
tempfile = "3.8"
