[package]
name = "metanode-integration-tests"
version = "1.0.0"
edition = "2021"
authors = ["Metanode Team <team@metanode.org>"]

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Decimal arithmetic
rust_decimal = "1.32"

# Logging
log = "0.4"
env_logger = "0.11"

# Testing utilities
tokio-test = "0.4"

# Real Metanode components (no mocks)
metanode-consensus = { path = "../bpi-core/crates/metanode-consensus" }
metanode-economics = { path = "../bpi-core/crates/metanode-economics" }
metanode-security = { path = "../bpi-core/crates/metanode-security" }

[lib]
name = "metanode_integration_tests"
path = "lib.rs"

[[test]]
name = "integration"
path = "integration/mod.rs"
