[package]
name = "bpi"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
warp = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "bpi"
path = "src/main.rs"
