[package]
name = "metanode"
version = "0.1.0"
edition = "2021"
description = "Unified military-grade enterprise BPI system"
authors = ["Metanode Team"]

[[bin]]
name = "metanode"
path = "src/main.rs"

[dependencies]
# Core components (existing crates) - simplified for initial build
bpi-receipts = { path = "../../rust/crates/receipts" }
bpi-headers = { path = "../../rust/crates/bpi-headers" }
bpi-math = { path = "../../rust/crates/bpi-math" }

# Crypto & Security (military-grade)
ring = "0.17"
blake3 = "1.5"
ed25519-dalek = "2.1"
aes-gcm = "0.10"
x25519-dalek = "2.0"
zeroize = "1.7"
rand = "0.8"
bincode = "1.3"

# CLI & System
clap = { version = "4.4", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
hex = "0.4"

# TLS & Networking
rustls = "0.21"
rustls-pemfile = "1.0"
rcgen = "0.11"
tokio-rustls = "0.24"

# File system monitoring for tamper detection
notify = "6.1"
sha2 = "0.10"

# System integration
sysinfo = "0.29"

# Time handling for key rotation (already defined above)
