[package]
name = "hermes-lite"
version = "0.1.0"
edition = "2021"
description = "HERMES-Lite (Web-5 Edition) - Hyperbolic Expander Mesh P2P for BPCI"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# QUIC transport (minimal for now)
quinn = "0.10"
rustls = "0.21"

# Cryptography (start simple)
blake3 = "1.5"
ed25519-dalek = "2.0"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Math (for S³/H³ coordinates)
nalgebra = "0.32"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
[dev-dependencies]
tokio-test = "0.4"
