[package]
name = "quantum-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
hex = "0.4"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Post-quantum cryptography libraries
pqcrypto-kyber = "0.7"
pqcrypto-dilithium = "0.5"
pqcrypto-falcon = "0.3"
pqcrypto-traits = "0.3"

# Classical cryptography for hybrid mode
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
aes-gcm = "0.10"

[dev-dependencies]
tokio-test = "0.4"
