[package]
name = "bpi-light-client"
version = "0.1.0"
edition = "2021"
description = "Light client verification for BPI Mesh consensus headers"

[dependencies]
# External crates
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Internal crates
bpi-enc = { path = "../enc" }
bpi-headers = { path = "../bpi-headers" }
bpi-validator-set = { path = "../bpi-validator-set" }
bpi-consensus = { path = "../bpi-consensus" }
bpi-slashing = { path = "../bpi-slashing" }
bpi-blsagg = { path = "../blsagg" }
bpi-vrf = { path = "../vrf" }

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "header_verification"
harness = false
