[package]
name = "bpi-oracle-node"
version = "0.1.0"
edition = "2021"
authors = ["BPI Core Team"]
description = "BPI Oracle Node - Cross-system communication bridge for BPI ecosystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bpi-core/bpi-oracle-node"
keywords = ["blockchain", "oracle", "communication", "bpi", "bridge"]
categories = ["network-programming", "cryptography", "web-programming"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Networking and HTTP
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"

# Concurrency and data structures
dashmap = "5.5"
arc-swap = "1.6"
parking_lot = "0.12"

# WebSocket support
tokio-tungstenite = "0.20"
futures-util = "0.3"

# Configuration and environment
config = "0.14"
dotenvy = "0.15"

# Metrics and monitoring
prometheus = { version = "0.13", optional = true }
metrics = "0.22"

# BPI core dependencies (local workspace)
bpi-enc = { path = "../metanode-security/bpi-enc" }

[[bin]]
name = "oracle_node_demo"
path = "src/bin/oracle_node_demo.rs"

[features]
default = ["metrics", "monitoring"]
metrics = ["prometheus"]
monitoring = ["metrics"]
high-throughput = []
