[package]
name = "enc-cluster-manager"
version = "0.1.0"
edition = "2021"
description = "Revolutionary ENC Cluster Manager - 100-year future-proof orchestration system"
authors = ["BPI Core Team"]
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client for BPI integration
reqwest = { version = "0.11", features = ["json"] }

# Cryptography for security
blake3 = "1.0"
ed25519-dalek = "2.0"

# Configuration
config = "0.13"

# Metrics and monitoring
prometheus = "0.13"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "enc_cluster_manager"
path = "src/lib.rs"
