[package]
name = "bpi-inclusion-lists"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inclusion-lists"
path = "src/bin/inclusion-lists.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Cryptography
blake3 = "1.5"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Data structures
ahash = "0.8"
lru = "0.12"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Metrics and observability
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration and CLI
clap = { version = "4.0", features = ["derive"] }

# BPI crates
bpi-enc = { path = "../enc" }
bpi-headers = { path = "../bpi-headers" }
bpi-mempool = { path = "../mempool" }

[dev-dependencies]
tempfile = "3.8"
