[package]
name = "bpi-mempool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mempool"
path = "src/bin/mempool.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Cryptography
ring = "0.17"
blake3 = "1.5"
rand = "0.8"
rand_core = "0.6"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# HTTP Server
warp = "0.3"

# Data structures
ahash = "0.8"
lru = "0.12"
priority-queue = "1.3"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Metrics and observability
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration and CLI
clap = { version = "4.0", features = ["derive"] }
once_cell = "1.19"

# BPI crates
bpi-enc = { path = "../enc" }
bpi-bpci = { path = "../bpci" }
bpi-headers = { path = "../bpi-headers" }

[dev-dependencies]
tempfile = "3.8"
