[package]
name = "universal-audit"
version = "0.1.0"
edition = "2021"
description = "Universal Runtime Audit System - Every action of every hosted code is recorded"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
ed25519-dalek = "2.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"
bincode = "1.3"

# BPI integration
bpi-enc = { path = "../metanode-security/bpi-enc" }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde_cbor = "0.11"
rmp-serde = "1.1"
hex.workspace = true

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
